<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.fragments.VisitadosFragment">


    <LinearLayout
        android:id="@+id/contenedorFiltros"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFiltroTodos"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_filtro_todos"
                android:textColor="@color/white"
                app:iconTint="@color/white"
                app:rippleColor="@color/ripple_color"
                app:strokeColor="@color/buttom_color_borde_seleccionado"
                app:backgroundTint="@color/button_background_seleccionado"
                android:layout_marginEnd="4dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFiltroRestaurante"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:rippleColor="@color/ripple_color"
                android:text="@string/btn_filtro_res"
                android:textColor="@color/white"
                app:icon="@drawable/img_restuarante1"
                app:iconTint="@color/white"
                app:strokeColor="@color/buttom_color_borde_seleccionado"
                app:backgroundTint="@color/button_background_seleccionado"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFiltroBar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:rippleColor="@color/ripple_color"
                android:text="@string/btn_filtro_bar"
                android:textColor="@color/white"
                app:strokeColor="@color/buttom_color_borde_seleccionado"
                app:backgroundTint="@color/button_background_seleccionado"
                app:icon="@drawable/bar"
                app:iconTint="@color/white"
                android:layout_marginStart="4dp"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/anton"
            android:text="@string/txt_filtro_puntuacion"
            android:textColor="@color/color_texto"
            android:textStyle="bold" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/filtroEstrellas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="5"
            app:values="@array/valores_slider"
            app:trackColorActive = "@color/white"
            app:trackColorInactive="@color/color_inactivo"
            app:thumbColor="@color/naranja_componentes"
            app:trackHeight="8dp"
            app:labelStyle="@style/sliderLabel"
            app:tickColorActive="@color/naranja_componentes"
            app:tickColorInactive= "@color/white"
            />
        <EditText
            android:id="@+id/etFiltroNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_filtro"
            android:textColor="@color/white"
            android:textColorHint="@color/color_hint"
            android:backgroundTint="@color/color_texto"
            android:inputType="text"
            android:maxLines="1"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewVisitados"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:layout_below="@+id/contenedorFiltros"/>


</RelativeLayout>
