<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".ui.fragments.InicioFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:alpha="0.15"
            android:scaleType="fitCenter"
            android:layout_gravity="top"
            android:src="@drawable/background_food"
             />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:src="@drawable/background_food"
            android:scaleType="fitCenter"
            android:layout_gravity="bottom"
            android:alpha="0.15"
             />
    </FrameLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/imgVLogo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@mipmap/logo"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvTitulo"/>

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@string/tv_bienvenida"
            android:textAlignment="center"
            android:textColor="@color/color_texto"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvSubtitulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgVLogo" />



        <TextView
            android:id="@+id/tvSubtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@string/tv_bienvenida_subtitle"
            android:textColor="@color/color_texto"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnAddRestaurante"/>


        <Button
            android:id="@+id/btnAddRestaurante"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/btn_addRestuarante"
            android:fontFamily="@font/anton"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginBottom="100dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>





</FrameLayout>